// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-9xe8te-11 fPXIVT"
      >
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders with result 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-9xe8te-11 fPXIVT"
      >
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
